# distPyLib

./: .gitignore  CMakeLists.txt  README.md  environment.yml  pyproject.toml  setup.py
examples/: simple_example.py
src/cc/: mpi_test.cc  mpi_test.hh  mpi_worker.cc  mpi_wrapper.cc  mpi_wrapper.hh  parallel_sum.cc  parallel_sum.hh  python_bindings.cc
src/distPyLib/: __init__.py  core.py
src/distPyLib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stubs/: _mpi_core.py  _parallel_sum.py
tests/: test_python_api.py
tests/cc/: CMakeLists.txt  test_main.cc  test_mpi_core.cc  test_parallel_sum.cc
