[build-system]
requires = ["scikit-build-core>=0.8.0", "pybind11>=2.6.0"]
build-backend = "scikit_build_core.build"

[project]
name = "distPyLib"
version = "1.0.0"
description = "A Python MPI library with C++ backend"
authors = [{name = "Josef Dräxl", email = "info@draexl-it.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest", "pytest-mpi"]

[tool.scikit-build]
cmake.minimum-version = "3.20"
cmake.build-type = "Release"
wheel.expand-macos-universal-tags = true